<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome1"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    tools:ignore="MissingConstraints,NotSibling" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locato"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:ignore="NotSibling" />

                <ImageView
                    android:id="@+id/homeImageView"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="28dp"
                    android:contentDescription="@string/home_icon"
                    android:src="@drawable/home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    app:layout_constraintVertical_bias="0.529"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColorHint="#8D6E63"
                tools:ems="10"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    tools:ignore="DisableBaselineAlignment">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cart_background">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="61dp"
                            android:layout_height="63dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/cat_1"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription,MissingConstraints"
                            tools:layout_editor_absoluteY="5dp" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/home1"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cart_background">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="61dp"
                            android:layout_height="63dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/cat_2"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck"
                            tools:layout_editor_absoluteY="5dp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/office1"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    tools:ignore="DisableBaselineAlignment">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cart_background">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="61dp"
                            android:layout_height="63dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/cat_3"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription,MissingConstraints"
                            tools:layout_editor_absoluteY="5dp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/apartment1"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cart_background">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="61dp"
                            android:layout_height="63dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/cat_4"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription,MissingConstraints"
                            tools:layout_editor_absoluteY="5dp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/villa1"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000000"


                    />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                     />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:id="@+id/viewPopular"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"


                    />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:layout_marginBottom="70dp"
                android:id="@+id/viewPopular1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"/>

        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
